--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
         "build": "node ./helper/build.js",
         "jest": "jest"
     },
+    "browser": {
+        "fs": false,
+        "path": false,
+        "os": false
+    },
     "author": "theajack",
     "repository": {
         "type": "git",
@@ -26,6 +31,7 @@
         "@babel/preset-env": "^7.6.3",
         "@commitlint/cli": "^8.2.0",
         "@commitlint/config-conventional": "^8.2.0",
+        "@types/css": "^0.0.33",
         "@types/jest": "^26.0.23",
         "@typescript-eslint/eslint-plugin": "^2.14.0",
         "@typescript-eslint/parser": "^2.14.0",
@@ -34,6 +40,7 @@
         "babel-plugin-transform-object-rest-spread": "^6.26.0",
         "chalk": "^4.1.1",
         "copy-webpack-plugin": "^6.2.1",
+        "css": "^3.0.0",
         "css-loader": "^5.2.5",
         "eslint": "^6.8.0",
         "eslint-config-standard": "^14.1.0",
