--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
     "name": "canvas-render-html",
-    "version": "0.0.1",
-    "description": "canvas-render-html",
+    "version": "0.0.1-alpha",
+    "description": "Render HTML code with Canvas",
+    "main": "index.min.js",
+    "unpkg": "canvas-render-html.min.js",
+    "jsdelivr": "canvas-render-html.min.js",
+    "typings": "types/npm.d.ts",
     "scripts": {
         "dev": "webpack-dev-server --open --config webpack-config/dev.js",
+        "build-npm": "webpack --config webpack-config/build.js",
         "build-web": "webpack --config webpack-config/build-web.js",
+        "build": "npm run build-npm && npm run build-web",
         "lint": "eslint src --ext js",
         "publish": "npm publish npm",
-        "build": "node ./helper/build.js",
         "jest": "jest"
     },
     "browser": {
@@ -21,7 +26,10 @@
         "url": "https://github.com/theajack/canvas-render-html"
     },
     "keywords": [
-        "canvas-render-html"
+        "canvas-render-html",
+        "canvas",
+        "render",
+        "html"
     ],
     "license": "MIT",
     "devDependencies": {
@@ -40,7 +48,6 @@
         "babel-plugin-transform-object-rest-spread": "^6.26.0",
         "chalk": "^4.1.1",
         "copy-webpack-plugin": "^6.2.1",
-        "css": "^3.0.0",
         "css-loader": "^5.2.5",
         "eslint": "^6.8.0",
         "eslint-config-standard": "^14.1.0",
@@ -66,6 +73,7 @@
         "webpack-dev-server": "^3.8.2"
     },
     "dependencies": {
+        "css": "^3.0.0",
         "htmlparser2": "^7.2.0",
         "pixi.js": "^6.2.2",
         "tc-event": "^0.0.6"
